# satsignal-mcp

./: CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: anchor.yml  publish.yml
scripts/: sync_vendored_builder.py  sync_vendored_builder.sh
src/satsignal_mcp/: __init__.py  api.py  canonical.py  node_bridge.py  server.py
tests/: test_anchor_json_guard.py  test_canonical.py  test_disclosable_tools.py  test_node_bridge.py  test_tools.py  test_version.py
