[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "satsignal-mcp"
version = "0.5.3"
description = "MCP server exposing Satsignal tamper-evident anchoring as agent-callable tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Satsignal" }]
license = { text = "MIT" }
keywords = ["satsignal", "mcp", "anchor", "bsv", "notary", "agent"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    # verify_file_against_bundle imports satsignal.verify.verify_file
    # (crypto + public-explorer chain confirm in one call) — pinned so a
    # clean install gets full verify out of the box. satsignal-cli's
    # only own dep is `requests`; its SPV/p2p modules are dormant
    # unless explicitly invoked.
    "satsignal-cli>=0.4",
]

[project.scripts]
satsignal-mcp = "satsignal_mcp.server:main"

[project.urls]
Homepage      = "https://satsignal.cloud"
Documentation = "https://satsignal.cloud/docs.html#mvp-integration"
Source        = "https://github.com/Steleet/satsignal-mcp"
Issues        = "https://github.com/Steleet/satsignal-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]
