[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "satsignal-mcp"
version = "0.7.0"
description = "MCP server exposing Satsignal tamper-evident anchoring as agent-callable tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Satsignal" }]
license = { text = "MIT" }
keywords = ["satsignal", "mcp", "anchor", "bsv", "notary", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    # verify_file_against_bundle imports satsignal.verify.verify_file
    # (crypto + public-explorer chain confirm in one call) — pinned so a
    # clean install gets full verify out of the box. satsignal-cli's
    # only own dep is `requests`; its SPV/p2p modules are dormant
    # unless explicitly invoked.
    "satsignal-cli>=0.4",
]

[project.scripts]
satsignal-mcp = "satsignal_mcp.server:main"

[project.urls]
Homepage      = "https://satsignal.cloud"
Documentation = "https://satsignal.cloud/docs.html#mvp-integration"
Source        = "https://github.com/Steleet/satsignal-mcp"
Issues        = "https://github.com/Steleet/satsignal-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

# The disclosable-* tools shell out to a VENDORED snapshot of the JS
# disclosure-builder (monorepo decision 0023 — one JS source of truth; the
# build-side leaf/JCS/Merkle crypto is not re-ported to Python). These .mjs +
# provenance files are package DATA, not importable Python, so they must be
# declared here to ship inside the sdist and wheel. The build gate greps the
# built wheel for vendor/disclosure_builder to catch an accidental omission.
# NOTE: the vendor dir is intentionally FLAT (no nested dirs) so these globs
# are exhaustive — keep it flat when re-syncing via scripts/sync_vendored_builder.sh.
[tool.setuptools.package-data]
satsignal_mcp = [
    "vendor/disclosure_builder/*.mjs",
    "vendor/disclosure_builder/*.json",
    "vendor/disclosure_builder/*.md",
    "vendor/disclosure_builder/SOURCE_COMMIT",
]
